--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
      autocomplete="off"
        placeholder="Search images..."
   />
-  <button type="submit">Searchh</button>
+  <button type="submit">Search</button>
 </form>
 </body>
 </html>
