--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 </div>
 
 <button type="button" class="load-more hidden">Load more</button>
-<script type="module" src="./index.js"></script>
+<script type="module" src="./index.js" defer></script>
 </body>
 </html>
 
